UF-14939: Add new resource for getWebmessages
